# viam-cpp-sdk

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  CNAME  Dockerfile  Doxyfile  Makefile  README.md  STYLEGUIDE.md  annotated.html  arm_8hpp.html  arm_8hpp_source.html  arm__client_8hpp.html  arm__client_8hpp_source.html  arm__server_8hpp.html  arm__server_8hpp_source.html  arm__trajectory__validation_8hpp_source.html  audio_8hpp_source.html  audio__in_8hpp.html  audio__in_8hpp_source.html  audio__in__client_8hpp.html  audio__in__client_8hpp_source.html  audio__in__server_8hpp.html  audio__in__server_8hpp_source.html  audio__out_8hpp.html  audio__out_8hpp_source.html  audio__out__client_8hpp.html  audio__out__client_8hpp_source.html  audio__out__server_8hpp.html  audio__out__server_8hpp_source.html  base_2impl_8hpp_source.html  base_8hpp.html  base_8hpp_source.html  base__client_8hpp.html  base__client_8hpp_source.html  base__server_8hpp.html  (+1567 more)
examples/echo/: CMakeLists.txt  Makefile  example_echo.cc
examples/project/cmake/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: proto_type.cc  proto_type.cpp  proto_type.h  proto_type.hpp  utils.cc  utils.cpp  utils.h  utils.hpp
src/components/: component_base.cc  component_base.cpp  component_base.h  component_base.hpp  component_type.cpp  component_type.hpp  generic.cpp  generic.hpp  reconfigurable_component.cpp  reconfigurable_component.hpp  resource_manager.cc  resource_manager.cpp  resource_manager.h  resource_manager.hpp  service_base.cc  service_base.cpp  service_base.h  service_base.hpp
src/components/base/: base.cpp  base.hpp  client.cpp  client.hpp  server.cpp  server.hpp
src/components/board/: board.cpp  board.hpp  client.cpp  client.hpp  server.cpp  server.hpp
src/components/camera/: camera.cpp  camera.hpp  client.cpp  client.hpp  server.cpp  server.hpp
src/components/generic/: client.cpp  client.hpp  generic.cpp  generic.hpp  server.cpp  server.hpp
src/components/motor/: client.cpp  client.hpp  motor.cpp  motor.hpp  server.cpp  server.hpp
src/components/servo/: client.cpp  client.hpp  servo.cpp  servo.hpp
src/config/: module.cpp  resource.cpp  resource.hpp  viam-cpp-sdk-libviamcpp.pc.in
src/module/: client.cc  client.cpp  client.hpp  handler_map.cpp  handler_map.hpp  manager.cc  manager.cpp  module.cpp  module.hpp  server.cpp  service.cpp  service.hpp
src/referenceframe/: frame.cpp  frame.hpp
src/registry/: registry.cc  registry.cpp  registry.h  registry.hpp
src/resource/: reconfigurable_resource.cpp  reconfigurable_resource.hpp  resource.cpp  resource.hpp  resource_base.cpp  resource_base.hpp  resource_manager.cpp  resource_manager.hpp  resource_server_base.cpp  resource_server_base.hpp  resource_type.cpp  resource_type.hpp
src/robot/: client.cc  client.cpp  client.h  client.hpp  service.cc  service.cpp  service.h  service.hpp
src/rpc/: dial.cc  dial.cpp  dial.hpp  server.cpp  server.hpp
src/services/: reconfigurable_service.cpp  reconfigurable_service.hpp  service_base.cpp  service_base.hpp  service_type.cpp  service_type.hpp
src/spatialmath/: geometry.cc  geometry.cpp  geometry.hpp  orientation.cc  orientation.cpp  orientation.hpp  orientation_types.cc  orientation_types.cpp  orientation_types.hpp
src/subtype/: subtype.cpp  subtype.hpp
src/tests/: CMakeLists.txt  test_base.cpp  test_board.cpp  test_camera.cpp  test_generic_component.cpp  test_motor.cpp  test_robot.cpp  test_types.cpp  test_utils.cpp  test_utils.hpp
src/tests/camera_tests/: CMakeLists.txt  test_camera.cpp
src/tests/mocks/: base_mocks.hpp  board_mocks.cpp  camera_mocks.cpp  camera_mocks.hpp  generic_mocks.cpp  generic_mocks.hpp  mock_motor.cpp  mock_motor.hpp
src/viam/: CMakeLists.txt
src/viam/api/: CMakeLists.txt  buf.yaml  viamcppsdk_replace_switch.cmake
src/viam/api/config/: buf.gen.custom.remote.yaml.in  buf.gen.local.yaml.in  buf.gen.remote.plugin.yaml.in  invoke_buf_generate.cmake.in  viam-cpp-sdk-libviamapi.pc.in
src/viam/cmake/: viamcppsdk_utils.cmake
src/viam/config/: viam-cpp-sdkConfig.cmake.in
src/viam/examples/: CMakeLists.txt  README.md
src/viam/examples/audioout/: test_playstream.cpp
src/viam/examples/camera/: CMakeLists.txt  example_camera.cpp  example_config.json
src/viam/examples/dial/: CMakeLists.txt  example_dial.cpp
src/viam/examples/dial_api_key/: CMakeLists.txt  example_dial_api_key.cpp
src/viam/examples/mlmodel/: CMakeLists.txt  example_audio_classification_client.cpp
src/viam/examples/modules/: CMakeLists.txt  example_mlmodel.cpp  example_mlmodelservice_tflite.cpp  example_module.cpp  mlmodelservice_tflite.cpp
src/viam/examples/motor/: CMakeLists.txt  example_config.json  example_motor.cpp
src/viam/examples/project/: README.md
src/viam/sdk/: CMakeLists.txt
src/viam/sdk/app/: app.cpp  app.hpp  app_client.cpp  app_client.hpp  app_proto.cpp  app_proto.hpp  billing.cpp  billing.hpp  client.cpp  client.hpp  data.hpp  data_client.cpp  data_client.hpp  data_client_proto_conversions.cpp  data_client_proto_conversions.hpp  data_client_types.cpp  data_client_types.hpp  robot_part.hpp  viam_client.cpp  viam_client.hpp
src/viam/sdk/common/: audio.cpp  audio.hpp  client_helper.cpp  client_helper.hpp  exception.cpp  exception.hpp  grpc_client_fwd.hpp.in  grpc_fwd.hpp.in  instance.cpp  instance.hpp  kinematics.cpp  kinematics.hpp  linear_algebra.cpp  linear_algebra.hpp  logger.cpp  logger.hpp  mesh.cpp  mesh.hpp  mime_types.hpp  pose.cpp  pose.hpp  pose_in_frame.cpp  pose_in_frame.hpp  proto_convert.cpp  proto_convert.hpp  proto_convert_vector.hpp  proto_t.cpp  proto_t.hpp  proto_type.cpp  proto_type.hpp  proto_utils.hpp  proto_value.cpp  proto_value.hpp  proto_value_visit.hpp  service_helper.cpp  service_helper.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp  (+8 more)
src/viam/sdk/components/: arm.cpp  arm.hpp  audio_in.cpp  audio_in.hpp  audio_out.cpp  audio_out.hpp  base.cpp  base.hpp  board.cpp  board.hpp  button.cpp  button.hpp  camera.cpp  camera.hpp  component.cpp  component.hpp  component_base.cpp  component_base.hpp  (+24 more)
(+1098 files in other folders)
